--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -1,7 +1,7 @@
 {
     "home": {
         "videos": "קטעי וידאו",
-        "sample-stories": "מבחר ספורים",
+        "sample-stories": "מבחר סיפורים",
         "messages": "לוח מודעות",
         "full-collection": "לאוסף המלא",
         "male-member-of-the-day": "חבר היום",
@@ -16,8 +16,8 @@
     },
     "app-title": "סִפּוּרֵי",
     "stories": {
-        "stories": "ספורים",
-        "place-stories": "ספורי המקום",
+        "stories": "סיפורים",
+        "place-stories": "סיפורי המקום",
         "zoom": "לקריאה בחלון גדול",
         "edit": "לעריכת הסיפור",
         "enter-story-name": "תן כותרת לסיפור",
@@ -25,12 +25,12 @@
         "cancel": "בטל",
         "approve": "אשר",
         "skip": "דלג",
-        "filter": "חפוש מהיר בשמות הספורים והמחברים שנמצאו",
+        "filter": "חפוש מהיר בשמות הסיפורים והמחברים שנמצאו",
         "save": "שמור",
         "to-the-full-story": "לסיפור המלא",
         "associated-members": "חברים הקשורים לסיפור",
         "associated-articles": "אובייקטים הקשורים לסיפור",
-        "word-index": "חפש מילים בתוכן הספורים",
+        "word-index": "חפש מילים בתוכן הסיפורים",
         "languages": "בחר שפה",
         "arabic": "ערבית",
         "german": "גרמנית",
@@ -47,21 +47,21 @@
         "new": "הוסף סיפור חדש",
         "new-story-content": "סיפור חדש",
         "new-story": "ללא כותרת",
-        "matching-stories": "ספורים כוללים את המילים שנבחרו",
-        "no-story": "לתמונה זו לא נמצא ספור",
-        "life-stories": "ספורי חיים",
+        "matching-stories": "סיפורים כוללים את המילים שנבחרו",
+        "no-story": "לתמונה זו לא נמצא סיפור",
+        "life-stories": "סיפורי חיים",
         "events": "ארועים",
         "photos": "תמונות",
         "terms": "מונחים",
-        "all-types": "כל סוגי הספורים",
-        "story-types": "סוג הספורים",
-        "apply-to-selected": "תייג את הספורים שנבחרו",
+        "all-types": "כל סוגי הסיפורים",
+        "story-types": "סוג הסיפורים",
+        "apply-to-selected": "תייג את הסיפורים שנבחרו",
         "checking": "סימון הסיפור",
         "older-links": "קישורים לאתר הישן",
         "delete": "מחק את הסיפורים שסומנו",
-        "undelete": "שחזור ספורים שנמחקו",
-        "undelete-now": "שחזר את הספורים המחוקים",
-        "delete-forever": "מחק את הספורים לתמיד",
+        "undelete": "שחזור סיפורים שנמחקו",
+        "undelete-now": "שחזר את הסיפורים המחוקים",
+        "delete-forever": "מחק את הסיפורים לתמיד",
         "to-the-member-page": "לדף החבר",
         "to-the-photo-page": "לדף התמונה",
         "term-page": "מתוך מילון המונחים",
@@ -69,28 +69,28 @@
         "words": "חיפוש מתקדם ",
         "random-order": "ללא סדר מיוחד",
         "by-chats": "תגובות שנוספו לאחרונה",
-        "by-update": " ספורים שעודכנו לאחרונה",
-        "already-approved": "הספור כבר מאושר",
-        "approve-story": "אשר את הספור",
+        "by-update": " סיפורים שעודכנו לאחרונה",
+        "already-approved": "הסיפור כבר מאושר",
+        "approve-story": "אשר את הסיפור",
         "initial-version": "גרסה ראשונה של הסיפור",
         "new-to-old": "חדשים תחילה",
         "old-to-new": "ישנים תחילה",
-        "by-name": "לפי שמות הספורים",
-        "uploaded-any-time": "ספורים שהועלו בזמן כלשהו",
-        "uploaded-today": "ספורים שהועלו היום",
-        "uploaded-this-week": "ספורים שהועלו השבוע",
-        "uploaded-this-month": "ספורים שהועלו החודש",
-        "uploaded-this-quarter": "ספורים שהועלו ברבעון זה",
-        "uploaded-this-year": "ספורים שהועלו השנה",
-        "approved-and-unapproved": "ספורים שאושרו ושלא אושרו",
-        "unapproved": "ספורים שטרם אושרו",
-        "approved": "ספורים שכבר אושרו",
+        "by-name": "לפי שמות הסיפורים",
+        "uploaded-any-time": "סיפורים שהועלו בזמן כלשהו",
+        "uploaded-today": "סיפורים שהועלו היום",
+        "uploaded-this-week": "סיפורים שהועלו השבוע",
+        "uploaded-this-month": "סיפורים שהועלו החודש",
+        "uploaded-this-quarter": "סיפורים שהועלו ברבעון זה",
+        "uploaded-this-year": "סיפורים שהועלו השנה",
+        "approved-and-unapproved": "סיפורים שאושרו ושלא אושרו",
+        "unapproved": "סיפורים שטרם אושרו",
+        "approved": "סיפורים שכבר אושרו",
         "update-associated-members": "עדכן חברים",
         "update-associated-photos": "עדכן תמונות",
         "consolidate-selected-story": "מזג לסיפור אחד",
         "highlight-on": "הפעל/הפסק הדגשת מילות החיפוש",
         "clean": "נקה",
-        "promote-selected-stories": "קדם את הספורים שנבחרו",
+        "promote-selected-stories": "קדם את הסיפורים שנבחרו",
         "unknown-source": "מקור בלתי ידוע",
         "updated-by": "עודכן על ידי",
         "authored-by": "חובר על ידי",
@@ -103,7 +103,7 @@
         "delete-forever-warning": "הסיפורים יימחקו ללא אפשרות שחזור. להמשיך?",
         "start-name": "השם הראשון שיוצג",
         "start-date": "התאריך הראשון שיוצג",
-        "end-of-stories": "--אין יותר ספורים--",
+        "end-of-stories": "--אין יותר סיפורים--",
         "sorting-key": "מפתח מיון",
         "enter-book-name": "הקלד את שם הספר",
         "story-date": "תאריך הסיפור",
@@ -149,7 +149,7 @@
         "mother": "אמא",
         "make-profile-photo": "קבע כתמונת הפרופיל",
         "new-member": "חבר חדש",
-        "more-stories": "ספורים קשורים",
+        "more-stories": "סיפורים קשורים",
         "set-as-profile-photo": "קבע כתמונת פרופיל",
         "visibility": "נִרְאוּת",
         "strange-bug": "בג מוזר",
@@ -166,9 +166,9 @@
         "clear-member-group": "נקה את הקבוצה שנבחרה",
         "story": "בחירת חברים הקשורים לסיפור",
         "term": "בחירת חברים הקשורים למונח",
-        "back-to-story": "חזרה לדף הספור",
+        "back-to-story": "חזרה לדף הסיפור",
         "back-to-term": "חזרה לדף המונח",
-        "to-story-page": "לדף הספור",
+        "to-story-page": "לדף הסיפור",
         "family-only": "קשרי משפחה",
         "all-members": "כל החברים",
         "cause-of-death": "סיבת המוות",
@@ -744,7 +744,7 @@
     "please-update-head": "<p dir='rtl'>תוכנת האתר עודכנה</p>",
     "please-update-body": "<p dir='rtl'>הדף ייטען עכשיו מחדש<br><p>",
     "please-update-stubborn": "<p dir='rtl'>אם הודעה זו חוזרת למרות הרענון, יש לנקות את זכרון המטמון</p>",
-    "promote-header-text": "<p>המנוע שמאחורי אתר הספורים עשוי להתאים לאתרים של קיבוצים, מושבים, משפחות גדולות ואולי קהילות נוספות</p><p>ליצירת קשר עם המפתחים, מלא בבקשה את הפרטים ולחץ על כפתור <b>שלח</b></p>",
+    "promote-header-text": "<p>המנוע שמאחורי אתר הסיפורים עשוי להתאים לאתרים של קיבוצים, מושבים, משפחות גדולות ואולי קהילות נוספות</p><p>ליצירת קשר עם המפתחים, מלא בבקשה את הפרטים ולחץ על כפתור <b>שלח</b></p>",
     "promote-name": "שם מלא",
     "promote-mobile": "מספר נייד",
     "promote-message": "ספר לנו עליך",
@@ -755,7 +755,7 @@
     "no-results": "<p dir='rtl'>לא נמצאו תוצאות מתאימות.<br>יש לשנות או להשמיט חלק מהמסננים</p>",
     "search-location": "חפש מקום",
     "result1": "חברים",
-    "result2": "ספורים",
+    "result2": "סיפורים",
     "result3": "תמונות",
     "result4": "מונחים",
     "result5": "הודעות",
