enable articles in menu

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -284,6 +284,10 @@
         "allow-publishing-off": "Do not allow displaying in apps galler",
         "expose-gallery-off": "Do not expose Gallery button",
         "expose-gallery-on": "Expose Gallery button",
+        "short-bio-title-on": "Show short bio title",
+        "short-bio-title-off": "Hide short bio title",
+        "objects-in-menu-on": "Include articles in menu",
+        "objects-in-menu-off": "Articles button inside members",
         "gallery": "Gallery",
         "audio-enabled": "Audio supported",
         "audio-disabled": "Audio not supported",
