--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -282,6 +282,10 @@
         "allow-publishing-off": "אל תאפשר תצוגה בגלריה",
         "expose-gallery-off": "ללא כפתור גלריה",
         "expose-gallery-on": "הצג כפתור גלריה",
+        "short-bio-title-on": "כולל כותרת קורות חיים",
+        "short-bio-title-off": "ללא כותרת קורות חיים",
+        "objects-in-menu-on": "אובייקטים בתפריט",
+        "objects-in-menu-off": "כפתור אובייקטים בחברים",
         "gallery": "גלריה",
         "audio-enabled": "אפשר הקלטות",
         "audio-disabled": "ללא הקלטות",
