articles in menu option

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -286,8 +286,8 @@
         "expose-gallery-on": "Expose Gallery button",
         "short-bio-title-on": "Show short bio title",
         "short-bio-title-off": "Hide short bio title",
-        "objects-in-menu-on": "Include articles in menu",
-        "objects-in-menu-off": "Articles button inside members",
+        "articles-in-menu-on": "Include articles in menu",
+        "articles-in-menu-off": "Articles button inside members",
         "gallery": "Gallery",
         "audio-enabled": "Audio supported",
         "audio-disabled": "Audio not supported",
