--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -284,8 +284,8 @@
         "expose-gallery-on": "הצג כפתור גלריה",
         "short-bio-title-on": "כולל כותרת קורות חיים",
         "short-bio-title-off": "ללא כותרת קורות חיים",
-        "objects-in-menu-on": "אובייקטים בתפריט",
-        "objects-in-menu-off": "כפתור אובייקטים בחברים",
+        "articles-in-menu-on": "אובייקטים בתפריט",
+        "articles-in-menu-off": "כפתור אובייקטים בחברים",
         "gallery": "גלריה",
         "audio-enabled": "אפשר הקלטות",
         "audio-disabled": "ללא הקלטות",
