--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -29,7 +29,7 @@
         "save": "שמור",
         "to-the-full-story": "לסיפור המלא",
         "associated-members": "חברים הקשורים לסיפור",
-        "associated-articles": "דברים הקשורים לסיפור",
+        "associated-articles": "אובייקטים הקשורים לסיפור",
         "word-index": "חפש מילים בתוכן הסיפורים",
         "languages": "בחר שפה",
         "arabic": "ערבית",
@@ -193,18 +193,18 @@
         "check-duplicates": "הצג שמות כפולים"
     },
     "articles": {
-        "articles": "דברים",
-        "filter": "הקלד את שם הדבר",
-        "filter-can-add": "הקלד את שם הדבר או שם של דבר חדש",
+        "articles": "אובייקטים",
+        "filter": "הקלד את שם האובייקט",
+        "filter-can-add": "הקלד את שם האובייקט או שם של אובייקט חדש",
         "life-summary": "אודות ",
-        "article-name": "שם הדבר",
+        "article-name": "שם האובייקט",
         "save": "שמור את השינויים",
         "cancel": "בטל את השינויים",
-        "delete-article": "מחק את הדבר",
+        "delete-article": "מחק את האובייקט",
         "start-date": "תחילת התקופה",
         "end-date": "סוף התקופה",
         "period": "תקופה: ",
-        "new": "צור דבר חדש"
+        "new": "צור אובייקט חדש"
     },
     "quiz": {
         "filters": "מסננים",
@@ -270,8 +270,8 @@
         "create-new-app": "ליצירת האתר שלי",
         "new-app-enabled": "אפשר יצירת אתר חדש",
         "new-app-disabled": "ללא יצירת אתר חדש",
-        "enable-articles-off": "ללא זיהוי דברים",
-        "enable-articles-on": "אפשר זיהוי דברים",
+        "enable-articles-off": "ללא זיהוי אובייקטים",
+        "enable-articles-on": "אפשר זיהוי אובייקטים",
         "enable-books-off": "ללא ספרים",
         "enable-books-on": "אפשר ספרים",
         "enable-member-of-the-day-off": "ללא חבר היום",
@@ -284,8 +284,8 @@
         "expose-gallery-on": "הצג כפתור גלריה",
         "short-bio-title-on": "כולל כותרת קורות חיים",
         "short-bio-title-off": "ללא כותרת קורות חיים",
-        "articles-in-menu-on": "דברים בתפריט",
-        "articles-in-menu-off": "כפתור דברים בחברים",
+        "articles-in-menu-on": "אובייקטים בתפריט",
+        "articles-in-menu-off": "כפתור אובייקטים בחברים",
         "gallery": "גלריה",
         "audio-enabled": "אפשר הקלטות",
         "audio-disabled": "ללא הקלטות",
@@ -394,7 +394,7 @@
         "search-member": "עם חברים...",
         "any-photo": "כל התמונות",
         "candidates": "מועמדים לצרוף מתוך התמונות",
-        "article-candidates": "דברים מועמדים לצרוף מתוך התמונות",
+        "article-candidates": "אובייקטים מועמדים לצרוף מתוך התמונות",
         "delete": "מחק את התמונות שנבחרו",
         "rotate": "סובב את התמונות שנבחרו",
         "rotate-photo": "סובב את התמונה",
@@ -436,14 +436,14 @@
         "alphabetical-order": "סדר אלפביתי",
         "edit-face-location": "לעריכת מיקום וגודל המעגל, לחץ על הכפתור הימני של העכבר או גרור את שפת המעגל או את תוכו",
         "click-to-identify": "הקלק על פרצוף כדי לזהותו",
-        "click-to-identify-article": "הקלק על דבר כדי לזהותו",
+        "click-to-identify-article": "הקלק על אובייקט כדי לזהותו",
         "add-details": "הוסף פרטים",
         "view-map": "הצג את המפה",
         "hide-map": "הסתר את המפה",
         "out-of": "מתוך ",
         "to-see-more": "כדי לראות יותר תמונות הקטן אותן. כשתגדיל אותן מספרן לא יקטן.",
         "mark-people": "סמן פרצופים",
-        "mark-articles": "סמן דברים",
+        "mark-articles": "סמן אובייקטים",
         "undo-last-change": "בטל את השינוי האחרון",
         "photo-detail": "סיפורה של התמונה",
         "create-qr-photo": "צור תמונה עם קוֹדָר",
@@ -767,5 +767,5 @@
     "result8": "סרטים",
     "result9": "מסמכים",
     "result10": "הקלטות",
-    "result12": "דברים"
+    "result12": "אובייקטים"
 }
