--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -542,7 +542,11 @@
         "doc-date": "תאריך המסמך",
         "members-in": "חברים הקשורים למסמך",
         "select-members": "בחר חברים הקשורים למסמך",
-        "fullscreen": "לחזרה F11.תצוגה במסך מלא"
+        "fullscreen": "לחזרה F11.תצוגה במסך מלא",
+        "by-name": "לצפייה בסדר אלפביתי",
+        "new-to-old": "מסמכים חדשים תחילה",
+        "old-to-new": "מסמכים ישנים תחילה",
+        "recently-uploaded": "מסמכים שהועלו לאחרונה"
     },
     "terms": {
         "terms": "מונחים",
