--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -546,7 +546,8 @@
         "by-name": "לצפייה בסדר אלפביתי",
         "new-to-old": "מסמכים חדשים תחילה",
         "old-to-new": "מסמכים ישנים תחילה",
-        "recently-uploaded": "מסמכים שהועלו לאחרונה"
+        "recently-uploaded": "מסמכים שהועלו לאחרונה",
+        "back-to-doc": "חזרה למסמך"
     },
     "terms": {
         "terms": "מונחים",
