--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -506,7 +506,11 @@
         "back-to-videos": "בחזרה לקטע הוידאו",
         "describe-cue": "תאר מה רואים בקטע",
         "members-in": "מי בקטע?",
-        "select-members": "בחר חברים הקשורים לסרט"
+        "select-members": "בחר חברים הקשורים לסרט",
+        "by-name": "לצפייה בסדר אלפביתי",
+        "new-to-old": "סרטים חדשים קודם",
+        "old-to-new": "סרטים ישנים קודם",
+        "recently-uploaded": "סרטים שהועלו לאחרונה"
     },
     "docs": {
         "docs": "מסמכים",
