--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -481,7 +481,11 @@
         "cue-description": "Description",
         "describe-cue": "Describe this segment",
         "members-in": "Members are in this segment",
-        "select-members": "Select associated members"
+        "select-members": "Select associated members",
+        "by-name": "Sort by name",
+        "new-to-old": "New videos first",
+        "old-to-new": "Old videos first",
+        "recently-uploaded": "Recently uploaded videos"
     },
     "audios": {
         "audios": "Audios",
