--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -200,6 +200,7 @@
         "article-name": "שם הפריט",
         "save": "שמור את השינויים",
         "cancel": "בטל את השינויים",
+        "already-identified": " כבר מזוהה בתמונה זו",
         "delete-article": "מחק את הפריט",
         "start-date": "תחילת התקופה",
         "end-date": "סוף התקופה",
