--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -202,6 +202,7 @@
         "cancel": "בטל את השינויים",
         "already-identified": " כבר מזוהה בתמונה זו",
         "delete-article": "מחק את הפריט",
+        "confirm-delete": "בטוח שרוצה למחוק את הפריט?",
         "start-date": "תחילת התקופה",
         "end-date": "סוף התקופה",
         "period": "תקופה: ",
