--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -332,7 +332,8 @@
         "enter-search-words": "Search words",
         "send-message": "Send",
         "to-participate": "In order to participate click here",
-        "explain-registration": "One-time registration is needed to become active"
+        "explain-registration": "One-time registration is needed to become active",
+        "confirm-delete": "Deletion can not be undone. Are you sure you want to delete chatroom?"
     },
     "photos": {
         "photos": "Photos",
