--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -335,7 +335,8 @@
         "send-message": "שלח",
         "to-participate": "הקלק כאן כדי להשתתף",
         "explain-registration": "כדי להשתתף בדיונים יש לבצע הרשמה חד-פעמית",
-        "confirm-delete": "המחיקה היא סופית. בטוח שברצונך למחוק את חדר הדיונים הזה?"
+        "confirm-delete": "המחיקה היא סופית. בטוח שברצונך למחוק את חדר הדיונים הזה?",
+        "enter-chatroom-name": "הכנס את שם חדר הדיונים החדש"
     },
     "photos": {
         "photos": "תמונות",
