--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -335,8 +335,9 @@
         "send-message": "שלח",
         "to-participate": "הקלק כאן כדי להשתתף",
         "explain-registration": "כדי להשתתף בדיונים יש לבצע הרשמה חד-פעמית",
-        "confirm-delete": "המחיקה היא סופית. בטוח שברצונך למחוק את חדר הדיונים הזה?",
-        "enter-chatroom-name": "הכנס את שם חדר הדיונים החדש"
+        "open-new-chatroom": "פתח קבוצת דיון חדשה",
+        "confirm-delete": "המחיקה היא סופית. בטוח שברצונך למחוק את קבוצת הדיון הזאת?",
+        "enter-chatroom-name": "הכנס את שם קבוצת הדיון החדשה"
     },
     "photos": {
         "photos": "תמונות",
