promote and more

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -468,6 +468,7 @@
         "apply-to-selected": "Tag the selected videos",
         "video-name": "Name the video clip",
         "send": "Send",
+        "duration": "Video duration",
         "message-successful": "Video was successfully added",
         "duplicate": "Video clip already exists",
         "unknown-video-type": "Unknown video type",
@@ -690,8 +691,8 @@
         "tablet": "Tablet",
         "smartphone": "Smartphone",
         "header-text": "<p>Your feedback is important.</p>",
-        "bad-message": "What I do not like in the site. Mandatory if 'like' side is empty.",
-        "good-message": "What I like in the site. Mandatory if 'dont like' side is empty.",
+        "bad-message": "Bugs and suggestions for improvement. Mandatory if 'Questions and wishes' side is empty.",
+        "good-message": "Questions and wishes. Mandatory if 'Bugs and suggestions' side is empty.",
         "name": "Enter your name",
         "email-address": "Email address. Mandatory!",
         "message-successful": "Your message was succesfully sent",
@@ -740,7 +741,8 @@
         "no-new-cover-photo-selected": "No new cover photo selected",
         "cover-photo": "Cover Photo",
         "select-cover-photo1": "To set cover photo, find photo,",
-        "select-cover-photo2": "To click the chain icon. then return here."
+        "select-cover-photo2": "To click the chain icon. then return here.",
+        "about-lifestone": "About Lifestone"
     },
     "feedbacks": "Feedback",
     "go-back": "Back",
@@ -764,7 +766,8 @@
     "please-update-body": "<p>The page will refresh now.<br><p> ",
     "please-update-stubborn": "<p>If this message repeats, please <strong>clear the cache memory</strong></p>",
     "promote-header-text": "<p>The engine behind this site may be used for other communities, large families etc.</p><p>To contact the developers, plase fill the form below and then press the SEND button.</p>",
-    "promote-name": "Name",
+    "promote-first-name": "First name",
+    "promote-last-name": "Last name",
     "promote-mobile": "Mobile phone",
     "promote-message": "Message",
     "promote-send": "Send",
