--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -269,7 +269,7 @@
         "config": "הגדרות מערכת",
         "by-invitation": "צרוף עורכים בהזמנה בלבד",
         "auto-reg": "אפשר הרשמה עצמית",
-        "create-new-app": "ליצירת האתר שלי",
+        "create-new-app": "יצירת האתר שלי",
         "new-app-enabled": "אפשר יצירת אתר חדש",
         "new-app-disabled": "ללא יצירת אתר חדש",
         "enable-articles-off": "ללא זיהוי פריטים",
@@ -492,6 +492,7 @@
         "video-name": "תן שם לקטע הוידאו",
         "apply-to-selected": "שמור את התיוגים",
         "send": "שלח",
+        "duration": "אורך הסרטון",
         "message-successful": "הוידאו הועלה בהצלחה",
         "duplicate": "הוידאו כבר קיים במערכת",
         "unknown-video-type": "סוג וידאו שאינו מוכר למערכת",
@@ -690,8 +691,8 @@
         "tablet": "טבלט",
         "smartphone": "טלפון חכם",
         "header-text": "<p>המשוב שלך חשוב להמשך הפיתוח ושיפור חווית המשתמש.</p>",
-        "bad-message": "מה אינני אוהב באתר. חובה למלא אם לא מלאת מה את.ה אוהב.ת",
-        "good-message": "מה אני אוהב באתר. חובה למלא אם לא מלאת מה את.ה לא אוהב.ת",
+        "bad-message": "תקלות והצעות לשיפורים. חובה למלא אם לא מילאת שאלות ומשאלות",
+        "good-message": "מה אני אוהב באתר. חובה למלא אם לא מילאת תקלות והצעות לשיפורים",
         "name": "שם",
         "email-address": "כתובת דואר אלקטרוני. חובה למלא!",
         "message-successful": "המשוב שלך נשמר בהצלחה",
@@ -740,7 +741,8 @@
         "no-new-cover-photo-selected": "לא נבחרה תמונת שער חדשה",
         "cover-photo": "תמונת השער",
         "select-cover-photo1": "כדי לקבוע תמונת שער, צא ומצא תמונה.",
-        "select-cover-photo2": "הקלק על אייקון השלשלת ואז חזור לכאן."
+        "select-cover-photo2": "הקלק על אייקון השלשלת ואז חזור לכאן.",
+        "about-lifestone": "אודות Lifestone"
     },
     "go-back": "חזור",
     "parents": "הורים",
@@ -763,7 +765,8 @@
     "please-update-body": "<p dir='rtl'>הדף ייטען עכשיו מחדש<br><p>",
     "please-update-stubborn": "<p dir='rtl'>אם הודעה זו חוזרת למרות הרענון, יש לנקות את זכרון המטמון</p>",
     "promote-header-text": "<p>המנוע שמאחורי אתר הסיפורים עשוי להתאים לאתרים של קיבוצים, מושבים, משפחות גדולות ואולי קהילות נוספות</p><p>ליצירת קשר עם המפתחים, מלא בבקשה את הפרטים ולחץ על כפתור <b>שלח</b></p>",
-    "promote-name": "שם מלא",
+    "promote-first-name": "שם פרטי",
+    "promote-last-name": "שם משפחה",
     "promote-mobile": "מספר נייד",
     "promote-message": "ספר לנו עליך",
     "promote-send": "שלח",
