--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -692,7 +692,7 @@
         "smartphone": "טלפון חכם",
         "header-text": "<p>המשוב שלך חשוב להמשך הפיתוח ושיפור חווית המשתמש.</p>",
         "bad-message": "תקלות והצעות לשיפורים. חובה למלא אם לא מילאת שאלות ומשאלות",
-        "good-message": "מה אני אוהב באתר. חובה למלא אם לא מילאת תקלות והצעות לשיפורים",
+        "good-message": "שאלות ומשאלות. חובה למלא אם לא מילאת תקלות והצעות לשיפורים",
         "name": "שם",
         "email-address": "כתובת דואר אלקטרוני. חובה למלא!",
         "message-successful": "המשוב שלך נשמר בהצלחה",
