--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -690,9 +690,9 @@
         "desktop": "Desktop",
         "tablet": "Tablet",
         "smartphone": "Smartphone",
-        "header-text": "<p>Your feedback is important.</p>",
-        "bad-message": "Bugs and suggestions for improvement. Mandatory if 'Questions and wishes' side is empty.",
-        "good-message": "Questions and wishes. Mandatory if 'Bugs and suggestions' side is empty.",
+        "header-text": "<p>Your feedback is important for the developer to fix bugs and improve user experience.</p>",
+        "header-text1": "<p>The site editors can use your feedback to correct inaccuracies and add more information .</p>",
+        "message": "Bugs, suggestions, questions and wishes. Mandatory.",
         "name": "Enter your name",
         "email-address": "Email address. Mandatory!",
         "message-successful": "Your message was succesfully sent",
