--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -690,9 +690,9 @@
         "desktop": "מחשב שולחן",
         "tablet": "טבלט",
         "smartphone": "טלפון חכם",
-        "header-text": "<p>המשוב שלך חשוב להמשך הפיתוח ושיפור חווית המשתמש.</p>",
-        "bad-message": "תקלות והצעות לשיפורים. חובה למלא אם לא מילאת שאלות ומשאלות",
-        "good-message": "שאלות ומשאלות. חובה למלא אם לא מילאת תקלות והצעות לשיפורים",
+        "header-text": "<p>המשוב שלך חשוב למפתח להמשך הפיתוח ושיפור חווית המשתמש.</p>",
+        "header-text1": "<p>עורכי האתר ישתמשו במשוב כדי להעשיר ולדייק את תוכנו.</p>",
+        "message": "תקלות, הצעות לשיפורים, שאלות ומשאלות. חובה למלא.",
         "name": "שם",
         "email-address": "כתובת דואר אלקטרוני. חובה למלא!",
         "message-successful": "המשוב שלך נשמר בהצלחה",
