--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -548,7 +548,8 @@
         "edit-filters": "נושאים ומילות מפתח",
         "link-to-doc-created": "קישור למסמך מוכן להדבקה בעורך",
         "click-to-close": "סגור את המסמך",
-        "view-details": "הצג/ערוך פרטים",
+        "view-edit-details": "הצג/ערוך פרטים",
+        "view-details": "הצג פרטים",
         "doc-date": "תאריך המסמך",
         "members-in": "חברים הקשורים למסמך",
         "select-members": "בחר חברים הקשורים למסמך",
