--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -544,7 +544,8 @@
         "edit-filters": "Topics and keywords",
         "link-to-doc-created": "Link to the document is ready for pasting in the editor",
         "click-to-close": "Click to close",
-        "view-details": "View/edit details",
+        "view-edit-details": "View/edit details",
+        "view-details": "View details",
         "doc-date": "Document date",
         "members-in": "Members associated with this document",
         "select-members": "Select associated members",
