--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -450,7 +450,7 @@
         "mark-people": "סמן פרצופים",
         "mark-articles": "סמן פריטים",
         "undo-last-change": "בטל את השינוי האחרון",
-        "photo-detail": "סיפורה של התמונה",
+        "photo-detail": "דף פרטי התמונה",
         "create-qr-photo": "צור תמונה עם קוֹדָר",
         "printed-photo-width": "רוחב התמונה המודפסת",
         "printed-photo-height": "גובה התמונה המודפסת",
