add-video vs edit-video-details

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -464,6 +464,7 @@
         "photographers": "Photographers",
         "new": "New video",
         "add-video": "Add video",
+        "edit-video-info": "Edit video details",
         "paste-video-address": "Paste the video address you copied from Youtube",
         "apply-to-selected": "Tag the selected videos",
         "video-name": "Name the video clip",
