--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -488,6 +488,7 @@
         "photographers": "צלמים",
         "new": "סרטון חדש",
         "add-video": "הוסף וידאו",
+        "edit-video-info": "ערוך את פרטי הסרטון",
         "paste-video-address": "הדבק את כתובת הוידאו שהעתקת מיוטיוב",
         "video-name": "תן שם לקטע הוידאו",
         "apply-to-selected": "שמור את התיוגים",
