--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -514,6 +514,7 @@
         "describe-cue": "תאר מה רואים בקטע",
         "members-in": "מי בקטע?",
         "select-members": "בחר חברים הקשורים לסרט",
+        "refresh-videos-info": "עדכן נתוני הסרטים",
         "by-name": "לצפייה בסדר אלפביתי",
         "new-to-old": "סרטים חדשים קודם",
         "old-to-new": "סרטים ישנים קודם",
