--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -484,16 +484,16 @@
     },
     "videos": {
         "videos": "סרטים",
-        "video-clips": "סרטוני וידאו",
+        "video-clips": "סרטי וידאו",
         "photographers": "צלמים",
-        "new": "סרטון חדש",
+        "new": "סרט חדש",
         "add-video": "הוסף וידאו",
         "edit-video-info": "ערוך את פרטי הוידאו",
         "paste-video-address": "הדבק את כתובת הוידאו שהעתקת מיוטיוב",
         "video-name": "תן שם לקטע הוידאו",
         "apply-to-selected": "שמור את התיוגים",
         "send": "שלח",
-        "duration": "אורך הסרטון",
+        "duration": "אורך הסרט",
         "message-successful": "הוידאו הועלה בהצלחה",
         "duplicate": "הוידאו כבר קיים במערכת",
         "unknown-video-type": "סוג וידאו שאינו מוכר למערכת",
@@ -503,9 +503,9 @@
         "keywords": "נושאים קשורים",
         "photographer-name": "שם הצלם",
         "unknown-photographer": "לא ידוע",
-        "promote-selected-videos": "קדם את הסרטונים שנבחרו",
+        "promote-selected-videos": "קדם את הסרטים שנבחרו",
         "delete-selected-videos": "מחק את הסרטים שנבחרו",
-        "filter": "חפוש מהיר בשמות הסרטונים",
+        "filter": "חפוש מהיר בשמות הסרטים",
         "edit-filters": "נושאים וצלמים",
         "add-cue": "הוסף קטע",
         "cue-time": "זמן התחלה",
