--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -753,6 +753,7 @@
     "feedbacks": "Feedback",
     "go-back": "Back",
     "parents": "Parents",
+    "grand-parents": "Grand parents",
     "siblings": "Siblings",
     "wife": "Wife",
     "wifes": "Wives",
