--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -752,6 +752,7 @@
     },
     "go-back": "חזור",
     "parents": "הורים",
+    "grand-parents": "סבים/סבתות",
     "siblings": "אחים/אחיות",
     "wife": "בת-זוג",
     "wifes": "בנות-זוג",
