--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -195,7 +195,11 @@
         "check-duplicates": "Check duplicates",
         "what-to-search": "Where do want to search?",
         "search-members": "Search member list",
-        "search-stories": "Search in stories"
+        "search-stories": "Search in stories",
+        "are-divorced": "are divorced",
+        "divorced": "Divorced",
+        "divorced-hidden": "Dont show as spoused",
+        "mistake": "Mistake"
     },
     "articles": {
         "articles": "Articles",
@@ -793,5 +797,6 @@
     "result9": "Document",
     "result10": "Audio",
     "result12": "Articles",
-    "change-cache": "just to cause different name"
+    "change-cache": "just to cause different name",
+    "and": " and "
 }
