--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -796,5 +796,9 @@
     "result9": "מסמכים",
     "result10": "הקלטות",
     "result12": "פריטים",
-    "and": "ו"
+    "and": "ו",
+    "name": "שם",
+    "email": "דואר אלקטרוני",
+    "message": "הודעה",
+    "date": "תאריך"
 }
