divorce and undo divorce

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -198,8 +198,8 @@
         "search-stories": "Search in stories",
         "are-divorced": "are divorced",
         "divorced": "Divorced",
-        "divorced-hidden": "Dont show as spoused",
-        "mistake": "Mistake"
+        "divorced-hidden": "Dont show as spouses",
+        "not-divorced": "Not divorced"
     },
     "articles": {
         "articles": "Articles",
