--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -16,7 +16,7 @@
     },
     "app-title": "סִפּוּרֵי",
     "stories": {
-        "stories": "סיפורים",
+        "stories": "הכל",
         "place-stories": "סיפורי המקום",
         "zoom": "לקריאה בחלון גדול",
         "edit": "לעריכת הסיפור",
