--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -575,7 +575,10 @@
         "new-to-old": "מסמכים חדשים תחילה",
         "old-to-new": "מסמכים ישנים תחילה",
         "recently-uploaded": "מסמכים שהועלו לאחרונה",
-        "back-to-doc": "חזרה למסמך"
+        "back-to-doc": "חזרה למסמך",
+        "add-doc-segment": "הוסף קטע",
+        "page-num": "עמוד",
+        "doc-segment-description": "תיאור הקטע"
     },
     "terms": {
         "terms": "מונחים",
