--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -318,7 +318,7 @@
         "version-time-off": "הסתר את תאריך הגרסה",
         "expose-developer-on": "הצג שם החברה",
         "expose-developer-off": "הסתר את שם החברה",
-        "quick-upload-photo": "העלה תמונה משלך לאתר",
+        "quick-upload-photo": "העלה תמונות בעצמך",
         "advanced-options": "אפשרויות מתקדמות",
         "advanced-options-off": "ללא אפשרויות מתקדמות",
         "advanced-options-on": "הצג אפשרויות מתקדמות",
